[package]
name = "remocom"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simple_logger = "1.11.0"
cargo_metadata = "0.12.0"
structopt = "0.3.20"
toml = "0.5.7"
xdg = "2.2.0"
